# Sophis

./: CONTRIBUTING.md  Cargo.toml  HARD_FORK_POLICY.md  LICENSE  MAINTAINERS.md  NOTICE  OPERATIONAL_BOUNDARIES.md  POW_POLICY.md  SECURITY.md  Whitepaper.md
.github/workflows/: test-pqc-publisher.yml
SIPS/: README.md  SIP-0-process.md  SIP-3-ALT.md  SIP-4-EVENTS.md
audit/: AUDIT_REPORT.md  coverage_full.txt
bootstrap-nodes/: BOOTSTRAP_RUNBOOK.md  HETZNER_SETUP_GUIDE.md  OCI_SETUP_GUIDE.md  README.md
bootstrap-nodes/cloud-init/: bootstrap1-cloud-init.yaml  bootstrap2-cloud-init.yaml
bootstrap-nodes/systemd/: resolved-no-stub.conf  sophis-dnsseeder-mainnet.service  sophis-dnsseeder-testnet.service
bridge/: Cargo.toml
bridge/docs/: README.md
components/addressmanager/src/: lib.rs  peer_score.rs
components/consensusmanager/src/: session.rs
consensus/client/src/: hash.rs
consensus/core/src/: commitment.rs  lib.rs
consensus/core/src/api/: mod.rs
consensus/core/src/config/: params.rs
consensus/core/src/errors/: block.rs  tx.rs
consensus/core/src/events/: mod.rs  store_types.rs
consensus/core/src/mass/: mod.rs
consensus/pow/src/: lib.rs
consensus/src/: test_helpers.rs
consensus/src/consensus/: mod.rs  services.rs  storage.rs
consensus/src/model/stores/: events.rs  mod.rs
consensus/src/pipeline/body_processor/: body_validation_in_context.rs
consensus/src/pipeline/virtual_processor/: processor.rs
consensus/src/processes/transaction_validator/: mod.rs  svm_integration_tests.rs  tx_validation_in_utxo_context.rs
crypto/hashes/: Cargo.toml
crypto/hashes/benches/: bench.rs
crypto/hashes/src/: hashers.rs
crypto/txscript/: Cargo.toml
crypto/txscript/src/: lib.rs
crypto/txscript/src/opcodes/: mod.rs
crypto/txscript/src/wasm/: opcodes.rs
daemon/: Cargo.toml
database/src/: registry.rs
dilithium-wallet/: Cargo.toml
dilithium-wallet/src/: main.rs
docker/: Dockerfile.rothschild  Dockerfile.simpa  Dockerfile.sophis-wallet  Dockerfile.sophisd  Dockerfile.stratum-bridge
docs/: ECOSYSTEM_OVERVIEW.md  FEE_PRIORITY.md  H1_CALCULATOR_DESIGN.md  I1_RUNBOOK.md  J4_RUNBOOK.md  L1_RUNBOOK.md  L3_COMMITMENT_DESIGN.md  MEMPOOL_POLICY.md  PRE_MAINNET_AUDIT.md  SVM_EXECUTION_MODEL.md
math/fuzz/: Cargo.toml
math/fuzz/fuzz_targets/: u128.rs  u192.rs  u256.rs
miner/: Cargo.toml
mining/: Cargo.toml
mining/src/: manager_tests.rs
mining/src/mempool/: check_transaction_standard.rs
oracle/core/: Cargo.toml
oracle/core/src/: lib.rs
oracle/docs/: ABI.md  CONTRACT_DISPATCH.md  PHASE9_RUNBOOK.md
oracle/feeds/: Cargo.toml
oracle/feeds/src/: lib.rs
oracle/host/: Cargo.toml
oracle/host/src/: lib.rs
oracle/pqc-tests/: Cargo.toml
oracle/pqc-tests/src/: lib.rs  scenarios.rs
oracle/relayer/: Cargo.toml
oracle/relayer/src/: main.rs  pipeline.rs
protocol/flows/src/: flow_context.rs  flow_trait.rs
protocol/flows/src/ibd/: flow.rs
rothschild/src/: main.rs
rpc/core/src/api/: ops.rs  rpc.rs
rpc/core/src/model/: commitment.rs  mod.rs
rpc/grpc/client/src/: lib.rs
rpc/grpc/core/proto/: messages.proto  rpc.proto
rpc/grpc/core/src/: ops.rs
rpc/grpc/core/src/convert/: message.rs  sophisd.rs
rpc/grpc/server/src/request_handler/: factory.rs
rpc/grpc/server/src/tests/: rpc_core_mock.rs
rpc/service/src/: service.rs
rpc/wrpc/client/src/: client.rs
rpc/wrpc/server/src/: router.rs
svm/core/src/: capability.rs  events.rs  gas.rs  lib.rs  utxo.rs
svm/host/: Cargo.toml
svm/host/src/: risc0.rs
svm/kani-proofs/src/: lib.rs
svm/runtime/: Cargo.toml
svm/runtime/src/: context.rs  engine.rs  host.rs
svm/runtime/tests/: emit_event_host_fn.rs
svm/sdk/src/: env.rs
testing/integration/: Cargo.toml
testing/integration/src/: consensus_integration_tests.rs  daemon_integration_tests.rs  rpc_tests.rs
testing/integration/src/common/: utils.rs
testnet-faucet/: README.md
testnet-faucet/deploy/: cloudflare-rules.md  deploy.sh  dns-setup.md  faucet.service  nginx-faucet.sophis.org.conf  sophisd-testnet.service
tools/sophis-calculator/: Cargo.toml
tools/sophis-calculator/src/: main.rs
tools/sophis-calculator/static/: app.js  index.html  style.css
tools/sophis-dashboard/: Cargo.toml
tools/sophis-dashboard/src/: dashboard.html  main.rs
wallet/aa-spec/: ANTI_PATTERNS.md  OPERATIONAL_BOUNDARIES_PARAGRAPH.md  SPEC.md
wallet/bip32/: Cargo.toml
wallet/bip32/src/: error.rs  lib.rs
wallet/bip32/src/mnemonic/: phrase.rs
wallet/bip39/src/: lib.rs
wallet/bip39/src/mnemonic/: phrase.rs
wallet/core/src/tests/: rpc_core_mock.rs
wallet/pskt/: Cargo.toml  DESIGN.md
wallet/pskt/src/: bundle.rs
wallet/pskt/src/wasm/: bundle.rs
wasm/: Cargo.toml
