[package]
name = "sophis-mining"
description = "Sophis mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sophis-addresses.workspace = true
sophis-consensus-core.workspace = true
sophis-consensusmanager.workspace = true
sophis-core.workspace = true
sophis-hashes.workspace = true
sophis-mining-errors.workspace = true
sophis-muhash.workspace = true
sophis-txscript.workspace = true
sophis-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
sophis-txscript.workspace = true
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
