[package]
name = "sophis-txscript"
description = "Sophis txscript engine library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-core = []
wasm32-sdk = []

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
cfg-if.workspace = true
hexplay.workspace = true
indexmap.workspace = true
itertools.workspace = true
sophis-addresses.workspace = true
sophis-consensus-core.workspace = true
sophis-hashes.workspace = true
sophis-txscript-errors.workspace = true
sophis-utils.workspace = true
sophis-wasm-core.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
libcrux-ml-dsa.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
smallvec.workspace = true
serde_json.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
