[package]
name = "sophis-oracle-core"
description = "DEPRECATED (2026-05-11) — Phase 5 ZK-Oracle shared types. Superseded by sophis-oracle-pqc-core (Phase 9). Scheduled for removal after Phase 9 publisher quorum bootstrap. See SIP-11 D11."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
borsh     = { workspace = true }
sha3      = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
