[package]
name = "sophis-oracle-feeds"
description = "DEPRECATED (2026-05-11) — Phase 5 Pythnet pull adapter. Superseded by Phase 9 publisher-side data fetching. Scheduled for removal after Phase 9 publisher quorum bootstrap. See SIP-11 D11."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sophis-oracle-core = { workspace = true }
borsh              = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
base64             = { workspace = true }
reqwest            = { workspace = true }
tokio              = { workspace = true }
async-trait        = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
