[package]
name = "sophis-oracle-host"
description = "DEPRECATED (2026-05-11) — Phase 5 Plonky3 prover host (ed25519 STARK trust chain). Superseded by Phase 9 direct Dilithium attestation. Scheduled for removal after Phase 9 publisher quorum bootstrap. See SIP-11 D11."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sophis-oracle-core = { workspace = true }
borsh              = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
bincode            = { workspace = true }
p3-air             = { workspace = true }
p3-baby-bear       = { workspace = true }
p3-challenger      = { workspace = true }
p3-commit          = { workspace = true }
p3-dft             = { workspace = true }
p3-field           = { workspace = true }
p3-fri             = { workspace = true }
p3-matrix          = { workspace = true }
p3-merkle-tree     = { workspace = true }
p3-symmetric       = { workspace = true }
p3-uni-stark       = { workspace = true }

[lints]
workspace = true
