[package]
name = "sophis-oracle-pqc-tests"
description = "Phase 9 PQC-native oracle: end-to-end pipeline integration tests (publisher → contract → indexer → consumer)"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sophis-oracle-pqc-core.workspace = true
sophis-oracle-pqc-contract.workspace = true
sophis-oracle-publisher.workspace = true
borsh.workspace = true
sha3.workspace = true

[lints]
workspace = true
