[package]
name = "sophis-svm-runtime"
description = "Sophis sVM runtime — Wasmtime engine, no-float validator, fuel metering, module cache"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true

[dependencies]
sophis-svm-core.workspace = true
sophis-database.workspace = true
wasmtime.workspace = true
wasmparser.workspace = true
thiserror.workspace = true
log.workspace = true
dashmap.workspace = true

[dev-dependencies]
wat = "1"
sophis-hashes.workspace = true

[lints]
workspace = true
