[package]
name = "sophis-dashboard"
description = "Public mainnet launch dashboard — hashrate, founder share, 24h wait countdown"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sophis-dashboard"
path = "src/main.rs"

[dependencies]
sophis-addresses.workspace = true
sophis-core.workspace = true
sophis-grpc-client.workspace = true
sophis-hashes.workspace = true
sophis-notify.workspace = true
sophis-rpc-core.workspace = true

axum = { workspace = true }
clap = { workspace = true }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
