[package]
name = "sophis-bip32"
description = "BIP32 for Sophis"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# include *.txt files for word lists
include = ["src/**/*.rs", "Cargo.toml", "src/**/*.txt"]
# include.workspace = true

[dependencies]
borsh.workspace = true
bs58.workspace = true
getrandom.workspace = true
hmac.workspace = true
js-sys.workspace = true
sophis-utils.workspace = true
once_cell.workspace = true
pbkdf2.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
zeroize.workspace = true
sophis-consensus-core.workspace = true

[dev-dependencies]
faster-hex.workspace = true

[lints]
workspace = true
