[package]
name = "sophis-wallet-pskt"
keywords = ["sophis", "wallet", "pskt", "psbt", "bip-370"]
description = "Partially Signed Sophis Transaction"
categories = ["cryptography::cryptocurrencies"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm32-sdk = ["sophis-consensus-client/wasm32-sdk"]
wasm32-types = ["sophis-consensus-client/wasm32-types"]

[dependencies]
sophis-addresses.workspace = true
sophis-bip32.workspace = true
sophis-consensus-client.workspace = true
sophis-consensus-core.workspace = true
sophis-txscript-errors.workspace = true
sophis-txscript.workspace = true
sophis-utils.workspace = true

bincode.workspace = true
derive_builder.workspace = true
js-sys.workspace = true
futures.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde_repr.workspace = true
serde-value.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
workflow-wasm.workspace = true
separator.workspace = true

[dev-dependencies]
serde_json.workspace = true
wasm-bindgen-test.workspace = true
js-sys.workspace = true
web-sys.workspace = true
libcrux-ml-dsa.workspace = true

[lints]
workspace = true
